--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 html {
   font-size: 16px;
@@ -11,32 +10,55 @@ html {
 *::before {
   box-sizing: inherit;
   line-height: 1.3;
+  margin: 0;
+  padding: 0;
+  outline: 1px dashed red;
 }
 
-body, button {
-    font-family: 'Public Sans', sans-serif;
+body,
+button {
+  font-family: "Public Sans", sans-serif;
+  letter-spacing: -.1px;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
-a, a:focus, a:hover {
-    text-decoration: none;
-    color: $GrayishBlue;
+a,
+a:focus,
+a:hover {
+  text-decoration: none;
+  color: $GrayishBlue;
 }
 
 .flex {
-    width: 100%;
-    display: flex;
+  width: 100%;
+  display: flex;
 
+  &__jc_sb {
+    justify-content: space-between;
+  }
 
-    &__ji_sb {
-        justify-content: space-between;
-    }
+  &__jc_c {
+    justify-content: center;
+  }
 
+  &__ai_c {
+    align-items: center;
+  }
+}
 
-    &__ai_c {
-        align-items: center;
-    }
+button {
+  background-color: transparent;
+  background-image: linear-gradient(90deg, $limeGreen, $brightCyan);
+  width: 20ch;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  font-weight: 400;
+  color: white;
+  padding: 0.5rem 1.2rem;
+  border-radius: 200px;
+  cursor: pointer;
 }
