--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,4 +1,4 @@
-@import 'variables';
-@import 'globals';
-@import 'header';
-@import 'main';
+@import "variables";
+@import "globals";
+@import "header";
+@import "hero";
