--- a/app/scss/_bankdetails.scss
+++ b/app/scss/_bankdetails.scss
@@ -1,7 +1,9 @@
 .bank_detail {
   background-color: $LightGrayishBlue;
-  color: $GrayishBlue; 
+  color: $GrayishBlue;
   padding: 2rem 3rem;
+  max-width: 1440px;
+  margin: 0 auto;
 
   h2,
   h3 {
@@ -9,32 +11,75 @@
     font-weight: 400;
   }
 
-  p{
-    font-size: 0.70rem;
+  p {
+    font-size: 0.7rem;
   }
 
   &__heading {
     text-align: center;
 
     h2 {
-        font-size: 1.5rem;
-        margin-bottom: 1.375rem;
+      font-size: 1.75rem;
+      margin-bottom: 1.3rem;
     }
   }
 
   &__cards {
-    
     .cards {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1.375rem;
-        margin-top: 1.375rem;
-        
-        p {
-            text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1.3rem;
+      margin-top: 1.3rem;
+
+      h3 {
+        font-size: 1rem;
+      }
+
+      p {
+        text-align: center;
+      }
+    }
+  }
+
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    padding: 8.75rem 6.25rem;
+
+    p {
+      font-size: 1rem;
+      text-align: start;
+    }
+
+    &__heading {
+      width: 38.5rem;
+      h2 {
+        font-size: 2rem;
+      }
+    }
+
+    &__cards {
+      display: flex;
+      gap: 1.625rem;
+      margin-top: 4rem;
+
+      .cards {
+        align-items: start;
+        justify-content: start;
+        width: 15rem;
+        margin-top: 0;
+        h3 {
+          font-size: 1.25rem;
         }
+
+        p {
+          text-align: start;
+        }
+      }
     }
   }
 }
