--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -6,6 +6,7 @@
   &__image {
     width: 100%;
     height: 16.25rem;
+    background-color: transparent;
     background-image: url("/images/bg-intro-mobile.svg");
     background-repeat: no-repeat;
     background-position: center center;
@@ -17,6 +18,7 @@
       position: absolute;
       height: 100%;
       width: 100%;
+      background-color: transparent;
       background-image: url("/images/image-mockups.png");
       background-position: center bottom -10px;
       background-size: 19.31rem auto;
