--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 16.25rem;
     background-color: transparent;
-    background-image: url("./images/bg-intro-mobile.svg");
+    background-image: url("../../images/bg-intro-mobile.svg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -19,7 +19,7 @@
       height: 100%;
       width: 100%;
       background-color: transparent;
-      background-image: url("./images/image-mockups.png");
+      background-image: url("../../images/image-mockups.png");
       background-position: center bottom -10px;
       background-size: 19.31rem auto;
       background-repeat: no-repeat;
@@ -53,7 +53,7 @@
     &__image {
       width: 46.875rem;
       height: 41.25rem;
-      background-image: url("./images/bg-intro-desktop.svg");
+      background-image: url("../../images/bg-intro-desktop.svg");
       background-position: bottom -7rem left -3rem;
       background-size: unset;
       overflow: unset;
