--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -11,8 +11,6 @@ header {
       display: none;
     }
   }
-
-  
 }
 
 nav {
@@ -24,9 +22,37 @@ nav {
       margin-right: 15px;
     }
 
-    @media (max-width: 1023px) {
-      display: none;
+    li a{
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+      
     }
+
+    li a:hover {
+      color: $darkBlue;
+    }
+
+    li a::after {
+      content: "";
+      background-image: linear-gradient(to right, $limeGreen, $brightCyan);
+      position: absolute;
+      top: 3rem;
+      left: 0;
+      opacity: 0;
+      width: 100%;
+      height: 4px;transition-duration: 1s;
+
+    }
+
+    li a:hover::after {
+      opacity: 1;
+      transition-duration: 1s;
+    }
+  }
+
+  @media (max-width: 1023px) {
+    display: none;
   }
 
   .hamburger {
