--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -22,11 +22,10 @@ nav {
       margin-right: 15px;
     }
 
-    li a{
+    li a {
       height: 100%;
       position: relative;
       overflow: hidden;
-      
     }
 
     li a:hover {
@@ -41,20 +40,21 @@ nav {
       left: 0;
       opacity: 0;
       width: 100%;
-      height: 4px;transition-duration: 1s;
-
+      height: 4px;
+      transition-duration: 1s;
     }
 
     li a:hover::after {
       opacity: 1;
       transition-duration: 1s;
-    } 
+    }
     @media (max-width: 1023px) {
-    display: none;
+      display: none;
+    }
+    @media (min-width: 1024px) {
+      display: flex;
+    }
   }
-  }
-
- 
 
   .hamburger {
     position: relative;
